--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
+    <title>Advanced Resume</title>
+    <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Resume</title>
   </head>
   <body>
