--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Resume</title>
   </head>
   <body>
-  <p>
-  lorem
-  </p>
+  <h1>
+   Mara Munoz
+  </h1>
+    <p> Phone Number: (808)651-8785 </p>
+    <p> Address: 20050 N Cave Creek Rd </p>
+    <br>
+    <h3> A very passionate programmer that loves learning new languages and new topics in the grand field of computer science. </h3> 
+    
   </body>
  </html>
