--- a/index.html
+++ b/index.html
@@ -8,14 +8,42 @@
     <title>Resume</title>
   </head>
   <body>
-  <img src="pic.jpeg" id="pic">
+  <img src="resume.jpeg" id="pic">
   <h1>
    Mara Munoz
   </h1>
-    <p> Phone Number: (808)651-8785 </p>
-    <p> Address: 20050 N Cave Creek Rd </p>
+    <p> Phone Number: (808)651-**** </p>
+    <p> Email Address: maukamnm@gmail.com  </p>
     <br>
-    <h3> A very passionate programmer that loves learning new languages and new topics in the grand field of computer science. </h3> 
-    
+    <p>A very passionate programmer that loves learning new languages and new topics in the grand field of computer
+        science. 
+     </p>
+     <h3>Skills and Knowledge</h3>
+    <ul>
+        <li>C++</li>
+         <li>Web development-HTML, JavaScript, and CSS</li>
+         <li>Computer Systems Information</li> 
+         <li>Beginning knowledge of SQL</li>
+         <li></li>
+    </ul>
+     <h2>Learning Experience</h2>
+     <ul>
+         <li>NuCamp Bootcamp: Web Development Fundamentals</li>
+         <li>LeTourneau</li>
+         <li>Self-Learning: </li>
+     </ul>
+     <h3> Work Experience</h3>
+     <ul>
+         <li>Garden House: Resident Guardian</li>
+         <li>Hessel Church: Administrative Assistant</li>
+         <li>Oaks Of Hebron: Personal Assistant</li>
+     </ul>
+    <h2> Programming Projects </h2>
+    <ul>
+       <li>Matching Emoji Game</li>
+       <li>Dating Parallax Website Site</li>
+       <li>Testing a Sudoku solution</li>
+      <li>Printout of the ASCII chart</li> 
+    </ul>
   </body>
  </html>
