--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
      <h2>Learning Experience</h2>
      <ul>
          <li>NuCamp Bootcamp: Web Development Fundamentals</li>
-         <li>LeTourneau</li>
-         <li>Self-Learning: </li>
+         <li>LeTourneau University: Systems Info, C++, and Java</li>
+         <li>Self-Learning: SQL, and advancement of my knowledge of each language listed above</li>
      </ul>
      <h3> Work Experience</h3>
      <ul>
