--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Resume</title>
   </head>
   <body>
-  <img src="resume.jpeg" id="pic">
+  <img src="resume.jpg" id="pic">
   <h1>
    Mara Munoz
   </h1>
