--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Resume</title>
   </head>
-  <body>
+  <body id="body">
   <img src="resume.jpg" id="pic">
   <h1>
    Mara Munoz
