--- a/index.html
+++ b/index.html
@@ -11,35 +11,46 @@
   <h1>
    Mara Munoz
   </h1>
+   
     <p> Phone Number: (808)651-**** </p>
+   
     <p> Email Address: maukamnm@gmail.com  </p>
-     <img src="resume.jpg" id="pic">
+    
+    <img src="pic.jpg" id="pic">
+     
      <h3>Skills and Knowledge</h3>
+
     <ul>
         <li>C++</li>
          <li>Web development-HTML, JavaScript, and CSS</li>
          <li>Computer Systems Information</li> 
          <li>Beginning knowledge of SQL</li>
-         <li></li>
     </ul>
+
      <h2>Learning Experience</h2>
+
      <ul>
          <li>NuCamp Bootcamp: Web Development Fundamentals</li>
          <li>LeTourneau University: Systems Info, C++, and Java</li>
          <li>Self-Learning: SQL, and advancement of my knowledge of each language listed above</li>
      </ul>
+
      <h3> Work Experience</h3>
+
      <ul>
          <li>Garden House: Resident Guardian</li>
          <li>Hessel Church: Administrative Assistant</li>
          <li>Oaks Of Hebron: Personal Assistant</li>
      </ul>
+
     <h2> Programming Projects </h2>
+
     <ul>
        <li>Matching Emoji Game</li>
        <li>Dating Parallax Website Site</li>
        <li>Testing a Sudoku solution</li>
       <li>Printout of the ASCII chart</li> 
     </ul>
+
   </body>
  </html>
