--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
    
     <p> Email Address: maukamnm@gmail.com  </p>
     
+    <div id="pic">
     <img src="pic.jpg" id="pic">
-     
+    </div>
      <h3>Skills and Knowledge</h3>
 
     <ul>
