--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p> Email Address: maukamnm@gmail.com  </p>
     
     <div id="pic">
-    <img src="pic.jpg" id="pic">
+    <img src="pic.jpg">
     </div>
      <h3>Skills and Knowledge</h3>
 
