--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      <ul>
          <li>NuCamp Bootcamp: Web Development Fundamentals</li>
          <li>LeTourneau University: Systems Info, C++, and Java</li>
-         <li>Self-Learning: SQL, and advancement of my knowledge of each language listed above</li>
+         <li>Self-Learning: SQL, and advancement of my knowledge of each language listed in skills</li>
      </ul>
 
      <h3> Work Experience</h3>
