--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Resume</title>
   </head>
-  <body id="body">
-  <h1>
+  <body>
+    <div id="pic">
+    <img src="pic.jpg">
+    </div>
+  <div id="content">
+   <h1>
    Mara Munoz
   </h1>
    
@@ -16,9 +20,6 @@
    
     <p> Email Address: maukamnm@gmail.com  </p>
     
-    <div id="pic">
-    <img src="pic.jpg">
-    </div>
      <h3>Skills and Knowledge</h3>
 
     <ul>
@@ -52,6 +53,6 @@
        <li>Testing a Sudoku solution</li>
       <li>Printout of the ASCII chart</li> 
     </ul>
-
+    </div>
   </body>
  </html>
