--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <li>C++</li>
          <li>Web development-HTML, JavaScript, and CSS</li>
          <li>Computer Systems Information</li> 
-         <li>Beginning knowledge of SQL</li>
+         <li>Beginning knowledge of SQL and JQuery</li>
     </ul>
 
      <h2>Learning Experience</h2>
