--- a/index.html
+++ b/index.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+
+<head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <title>Advanced Resume</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Resume</title>
-  </head>
-  <body>
+</head>
+
+<body id="body">
     <div id="pic">
-    <img src="pic.jpg">
+        <img src="pic.jpg">
     </div>
-  <div id="content">
-   <h1>
-   Mara Munoz
-  </h1>
-   
-    <p> Phone Number: (808)651-**** </p>
-   
-    <p> Email Address: maukamnm@gmail.com  </p>
-    
-     <h2>Skills and Knowledge</h2>
+    <div id="content">
+        <h1>
+            Mara Munoz
+        </h1>
 
-    <ul>
-         <li>C++</li>
-         <li>Web development-HTML, JavaScript, and CSS</li>
-         <li>Computer Systems Information</li> 
-         <li>Beginning knowledge of SQL and JQuery</li>
-    </ul>
+        <p> Phone Number: (808)651-**** </p>
 
-     <h2>Learning Experience</h2>
+        <p> Email Address: maukamnm@gmail.com </p>
 
-     <ul>
-         <li>NuCamp Bootcamp: Web Development Fundamentals</li>
-         <li>LeTourneau University: Systems Info, C++, and Java</li>
-         <li>Self-Learning: SQL, and advancement of my knowledge of each language listed in skills</li>
-     </ul>
+        <h2>Skills and Knowledge</h2>
 
-     <h2> Work Experience</h2>
+        <ul>
+            <li>C++</li>
+            <li>Web development-HTML, JavaScript, and CSS</li>
+            <li>Computer Systems Information</li>
+            <li>Beginning knowledge of SQL and JQuery</li>
+        </ul>
 
-     <ul>
-         <li>Garden House: Resident Guardian</li>
-         <li>Hessel Church: Administrative Assistant</li>
-         <li>Oaks Of Hebron: Personal Assistant</li>
-     </ul>
+        <h2>Learning Experience</h2>
 
-    <h2> Programming Projects </h2>
+        <ul>
+            <li>NuCamp Bootcamp: Web Development Fundamentals</li>
+            <li>LeTourneau University: Systems Info, C++, and Java</li>
+            <li>Self-Learning: SQL, and advancement of my knowledge of each language listed in skills</li>
+        </ul>
 
-    <ul>
-       <li>Matching Emoji Game</li>
-       <li>Dating Parallax Website Site</li>
-       <li>Testing a Sudoku solution</li>
-      <li>Printout of the ASCII chart</li> 
-    </ul>
+        <h2> Work Experience</h2>
+
+        <ul>
+            <li>Garden House: Resident Guardian</li>
+            <li>Hessel Church: Administrative Assistant</li>
+            <li>Oaks Of Hebron: Personal Assistant</li>
+        </ul>
+
+        <h2> Programming Projects </h2>
+
+        <ul>
+            <li>Matching Emoji Game</li>
+            <li>Dating Parallax Website Site</li>
+            <li>Testing a Sudoku solution</li>
+            <li>Printout of the ASCII chart</li>
+        </ul>
     </div>
-  </body>
- </html>
+</body>
+
+</html>
