--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Resume</title>
 </head>
-
-<body id="body">
+<div id="container">
+<body>
     <div id="pic">
         <img src="pic.jpg">
     </div>
-    <div id="content">
         <h1>
             Mara Munoz
         </h1>
