--- a/index.html
+++ b/index.html
@@ -7,12 +7,30 @@
     <title>Advanced Resume</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Resume</title>
+    <style>
+        body {
+            background: url(blurryCode.jpeg);
+        }
+
+        #content {
+            text-align: center;
+        }
+
+        #pic {
+            size: 20px;
+            float: right;
+            margin: 20px;
+            transform: rotate(10deg);
+            
+        }
+    </style>
 </head>
-<div id="container">
-<body>
-    <div id="pic">
+
+<body> 
+       <div id="pic">
         <img src="pic.jpg">
-    </div>
+        </div>
+    <div id="content">
         <h1>
             Mara Munoz
         </h1>
