--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Resume</title>
     <style>
         body {
-            background: url(blurryCode.jpeg);
+            background: "blurryCode.jpeg";
         }
 
         #content {
