--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
        <div id="pic">
         <img src="pic.jpg">
         </div>
+
     <div id="content">
-        <h1>
-            Mara Munoz
-        </h1>
+
+        <h1 id="name"> Mara Munoz</h1>
 
         <p> Phone Number: (808)651-**** </p>
 
@@ -57,5 +57,4 @@
         </ul>
     </div>
 </body>
-
 </html>
