--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <ul>
             <li>Matching Emoji Game</li>
-            <li>Dating Parallax Website Site</li>
+            <li>Dating Parallax Website</li>
             <li>Testing a Sudoku solution</li>
             <li>Printout of the ASCII chart</li>
         </ul>
