--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         <ul>
             <li>C++</li>
-            <li>Web development-HTML, JavaScript, and CSS</li>
+            <li>Java</li>
+            <li>Web Development languages - HTML, JavaScript, and CSS</li>
             <li>Computer Systems Information</li>
             <li>Beginning knowledge of SQL and JQuery</li>
         </ul>
@@ -53,7 +54,6 @@
             <li>Matching Emoji Game</li>
             <li>Dating Parallax Website</li>
             <li>Testing a Sudoku solution</li>
-            <li>Printout of the ASCII chart</li>
         </ul>
     </div>
 </body>
