--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <br>
             <li>Java</li>
             <br>
-            <li>Web Development languages - HTML, JavaScript, and CSS</li>
+            <li>Web Development languages: HTML, JavaScript, and CSS</li>
             <br>
             <li>Computer Systems Information</li>
             <br>
