--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <h1 id="name"> Mara Munoz</h1>
 
-       <div id="content">
+       <div id="container">
 
         <p> Phone Number: (808)651-**** </p>
 
