--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Advanced Resume</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Resume</title>
+    
 </head>
 
 <body> 
-       <div id="pic">
-        <img src="pic.jpg">
-        </div>
-
+    <div class="container">
+  <div class="row">
+    <div class="col"> 
         <h1 id="name"> Mara Munoz</h1>
     
        <div id="container">
@@ -35,7 +35,12 @@
             <br>
             <li>Beginning knowledge of SQL and JQuery</li>
         </ul>
-
+        </div>
+         <div class="col">
+        <img src="pic.jpg">
+      </div>
+         <div class="row">
+    <div class="col"> 
         <h2>Learning Experience</h2>
 
         <ul>
@@ -66,5 +71,7 @@
             <li>Testing a Sudoku solution</li>
         </ul>
     </div>
+        </div>
+      </div>
 </body>
 </html>
