--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body> 
     <div class="container">
   <div class="row">
-    <div class="col"> 
+    <div class="col-md-6"> 
         <h1 id="name"> Mara Munoz</h1>
     
        <div id="container">
@@ -39,11 +39,11 @@
             <li>Beginning knowledge of SQL and JQuery</li>
         </ul>
         </div>
-         <div class="col">
+         <div class="col-md-6">
         <img src="pic.jpg">
       </div>
          <div class="row">
-    <div class="col"> 
+    <div class="col-md-6"> 
         <h2>Learning Experience</h2>
 
         <ul>
