--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     I am a hands on learner with project management experiences, and am a dedicated
                     mother that pushes past the boundaries and stereotypes in the workplace. I first became interested
                     in programming a year and a half ago which was when I fell in love with it. Partly due to fulfilling
-                    my passion in helping people with tools and resources in technology, and partly out of my love to create.
+                    my passion in helping people with tools and resources in technology, and partly due to my creativity.
                     I started off learning Python, then switched to learning an easier language: HTML. I went on to
                     learn CSS, JavaScript, C++, and then Java. I have dabbled in learning SQL, and various other things
                     like networks,computer information systems, and using Kali and Linux in regards to cyber security.
