--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="jquery.txt"></script>
+    <script>
+        $("document").ready(function () {
+
+            $("#body").fadeIn(2000);
+        });
+            
+    </script>
 </head>
 
-<body>
+<body id="body">
     <h1 style="text-align: center;" >Mara Munoz</h1>
     <div class="container">
         <div class="row align-self-center">
