--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             form.</p>
                     </li>
                     <li>
-                        Art Sales Website with Web Technologies <p>Currently managing a website with HTML, CSS, and
+                        Art Sales Website<p>Currently managing a website that contains HTML, CSS, and
                             JavaScript that handles the owner’s portfolio
                             and photo sales. Throughout the process, unclear requirements arose regarding styling,
                             featured photos, and fonts. Each time, I was approachable and immediately clarified the
