--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="jquery.txt"></script>
     <script>
-        $("document").ready(function () {
-
-            $("#body").fadeIn(2000);
-        });
-            
+       $(document).ready(function () {
+    $("#body).fadeIn(1000);
+});
     </script>
 </head>
 
