--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                         Bootstrap user interface.
                     </p>
                     <li>
-                        Contact-Book Java Application Program (in-progress): </li>
-                    <p>I am creating a Java console application to allow for the storage of an inheritance base contact
+                        Contact-Book Java Application Program: </li>
+                    <p>I created a Java console application to allow for the storage of an inheritance base contact
                         class
                         with children classes of personal contact and business contact. Encapsulation of attributes
                         managed business logic and support validation of data. The final project will be deployed on an
@@ -146,6 +146,7 @@
                 </h3>
                 <ul>
                     <li>ChastainImages - Freelance Web Developer: April 2020 - August 2020</li>
+                    <li>Hessel Church - Freelance Web Developer: March 2020 - March 2020</li>
                     <li>Garden House - Resident Guardian/Assistant: January, 2020 - Current</li>
                     <li>Hessel Church - Administrative Assistant: May, 2019 - December, 2019</li>
                     <li>Oaks of Hebron - Personal Asistant: May, 2018 - December, 2019</li>
