--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                     <li>
                         Completed root cause analysis, designed solutions, wrote detailed software code, and performed
-                        testing in the debugger.
+                        Application testing in the debugger.
                     </li>
 
                     <li>
